--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.0.3",
+    "@mswjs/data": "^0.16.2",
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
@@ -51,6 +53,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^25.0.1",
+    "msw": "^2.4.11",
     "postcss": "^8.4.31",
     "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "^3.3.5",
